--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-cayman
+title: ZIP的博客
+email: gaozp619@mail.ustc.edu.cn
+description: 古路无行客，寒山见诸君
+url: "http://zipgao.github.io"
