--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,8 @@ url: "zipgao.github.io" # the base hostname & protocol for your site, e.g. http:
 # github_username:  jekyll
 
 # Build settings
-theme: minima
+theme: "just-the-docs"
+# remote_theme: just-the-docs/just-the-docs
 plugins:
   - jekyll-feed
 
