--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ theme: just-the-docs
 remote_theme: just-the-docs/just-the-docs
 title: Echo
 description: A Jekyll theme for documentation
-# baseurl: "/just-the-docs" # the subpath of your site, e.g. /blog
+baseurl: "/docs" # the subpath of your site, e.g. /blog
 url: "https://github.com/ZipGao" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
