--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ remote_theme: just-the-docs/just-the-docs
 title: Echo
 description: A Jekyll theme for documentation
 baseurl: "/docs" # the subpath of your site, e.g. /blog
-url: "https://github.com/ZipGao" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://zipgao.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"
